--- a/SongsForWorship/SongsForWorship/Views/SearchResultTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/SearchResultTVCell.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="SearchResultTVCell" id="2" customClass="SearchResultTVCell" customModule="PsalmsForWorship" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="SearchResultTVCell" id="2" customClass="SearchResultTVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="y7a-Sl-kyh">
@@ -26,10 +27,12 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6" secondAttribute="bottom" constant="10" id="Mj8-36-wFe"/>
                     <constraint firstAttribute="centerY" secondItem="6" secondAttribute="centerY" id="jXm-8e-78M"/>
                     <constraint firstAttribute="centerY" secondItem="3" secondAttribute="centerY" id="lFf-TZ-sV2"/>
                     <constraint firstItem="3" firstAttribute="leading" secondItem="y7a-Sl-kyh" secondAttribute="leading" constant="10" id="mVR-ax-U5v"/>
                     <constraint firstItem="6" firstAttribute="leading" secondItem="y7a-Sl-kyh" secondAttribute="leading" constant="66" id="n7c-tt-jen"/>
+                    <constraint firstItem="6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="y7a-Sl-kyh" secondAttribute="top" constant="10" id="vpf-9C-y5y"/>
                     <constraint firstAttribute="trailing" secondItem="6" secondAttribute="trailing" constant="10" id="xs3-aw-prI"/>
                 </constraints>
             </tableViewCellContentView>
