--- a/SongsForWorship/SongsForWorship/SongDetail.storyboard
+++ b/SongsForWorship/SongsForWorship/SongDetail.storyboard
@@ -86,6 +86,49 @@
             </objects>
             <point key="canvasLocation" x="3870.4000000000001" y="-889.65517241379325"/>
         </scene>
+        <!--Select Song MenuVC-->
+        <scene sceneID="AGP-Ma-xQX">
+            <objects>
+                <viewController storyboardIdentifier="SelectSongMenuVC" id="t7h-UH-ybG" customClass="SelectSongMenuVC" customModule="SongsForWorship" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Ms-bk-xiy">
+                        <rect key="frame" x="0.0" y="0.0" width="90" height="40"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="4gD-t9-qFd">
+                                <rect key="frame" x="0.0" y="44" width="90" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RjO-EW-Ha3">
+                                        <rect key="frame" x="0.0" y="0.0" width="44" height="30"/>
+                                        <state key="normal" title="119A"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Km7-F6-5Xl">
+                                        <rect key="frame" x="46" y="0.0" width="44" height="30"/>
+                                        <state key="normal" title="119B"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="AW5-uh-e7g"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4gD-t9-qFd" firstAttribute="leading" secondItem="8Ms-bk-xiy" secondAttribute="leading" id="5yT-OE-0SH"/>
+                            <constraint firstAttribute="trailing" secondItem="4gD-t9-qFd" secondAttribute="trailing" id="9wx-vc-wg1"/>
+                            <constraint firstItem="AW5-uh-e7g" firstAttribute="top" secondItem="4gD-t9-qFd" secondAttribute="top" id="ucB-Ec-kMi"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="90" height="40"/>
+                    <connections>
+                        <outlet property="stackView" destination="4gD-t9-qFd" id="mfW-8d-Raw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oh7-Q0-NB0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1881" y="161"/>
+        </scene>
         <!--Tunes-->
         <scene sceneID="CMY-Ca-0Ag">
             <objects>
@@ -365,6 +408,9 @@
         <image name="speaker.wave.3.fill" catalog="system" width="128" height="86"/>
         <image name="textformat.size" catalog="system" width="128" height="80"/>
         <image name="tunes_icon" width="10" height="14"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
