--- a/SongsForWorship/SongsForWorship/Views/GenericTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/GenericTVCell.xib
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="GenericTVCell" id="KGk-i7-Jjw" customClass="GenericTVCell" customModule="PsalmsForWorship" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="GenericTVCell" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="GenericTVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Preparing our hearts and minds for worship" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vF6-wB-kfn">
+                        <rect key="frame" x="38.333333333333329" y="11.666666666666664" width="243.66666666666669" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="vF6-wB-kfn" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="1Hw-ni-Pcb"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vF6-wB-kfn" secondAttribute="bottom" constant="11.5" id="COC-Pc-sck"/>
+                    <constraint firstItem="vF6-wB-kfn" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Of2-ku-BNK"/>
+                    <constraint firstItem="vF6-wB-kfn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Syu-Nw-gjG"/>
+                    <constraint firstItem="vF6-wB-kfn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11.5" id="bbg-jq-lyI"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vF6-wB-kfn" secondAttribute="trailing" constant="20" id="plH-V9-qBj"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="label" destination="vF6-wB-kfn" id="tga-Kd-ePj"/>
+            </connections>
             <point key="canvasLocation" x="139" y="153"/>
         </tableViewCell>
     </objects>
