--- a/SongsForWorship/SongsForWorship/Main_iPhone.storyboard
+++ b/SongsForWorship/SongsForWorship/Main_iPhone.storyboard
@@ -221,11 +221,11 @@
             <objects>
                 <viewController storyboardIdentifier="SettingsVC" id="peQ-jw-03k" customClass="SettingsVC" customModule="SongsForWorship" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="scV-Bs-Maj">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="241"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Hsc-Kk-1Tx">
-                                <rect key="frame" x="0.0" y="44" width="414" height="241"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Hsc-Kk-1Tx">
+                                <rect key="frame" x="0.0" y="44" width="414" height="236"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JyW-k8-ATg">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
@@ -349,14 +349,14 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NO1-MQ-Ej1">
-                                        <rect key="frame" x="0.0" y="137" width="414" height="104"/>
+                                        <rect key="frame" x="0.0" y="132" width="414" height="104"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qIm-oL-kf8">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="104"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nTg-3f-6u3">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="0.5"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="0.5" id="Szj-R7-UHA"/>
                                                         </constraints>
@@ -530,6 +530,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="414" height="241"/>
                     <connections>
                         <outlet property="autoNightThemeSwitch" destination="TC3-eN-j11" id="DTA-om-IBx"/>
                         <outlet property="customFontCheckMarkImageView" destination="7Re-dT-hLr" id="dKQ-1v-LVY"/>
